--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,31 @@ body {
 .tabs-container {
   margin-bottom: 24px;
 }
+
+/* Global input with icon styles */
+.input-with-icon {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  font-size: 16px;
+  color: #666;
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  background-color: #f0f0f0;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-right: 1px solid #e0e0e0;
+}
+
+.input-with-icon input {
+  padding-left: 40px;
+  text-align: left;
+}
