button icon formatting

--- a/src/App.css
+++ b/src/App.css
@@ -175,12 +175,17 @@ body {
   flex: 1;
   height: 48px;
   padding: 12px;
-  padding-left: 30px;
+  padding-left: 12px;
   border: none;
   outline: none;
   font-size: 16px;
   color: #333;
   background-color: white;
+}
+
+/* Fix placeholder alignment in amount fields */
+.input-with-icon input::placeholder {
+  color: #999;
 }
 
 .input-field input:not(.input-with-icon input),
@@ -206,16 +211,61 @@ body {
 
 /* Custom select styling */
 select {
-  background-position: calc(100% - 16px) center;
-  background-size: 16px;
-  padding-right: 40px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23666666%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 12px;
+  padding-right: 32px;
 }
 
 select::-ms-expand {
   display: none;
 }
 
+/* Date input styling */
+input[type="date"] {
+  position: relative;
+  padding-right: 32px;
+}
+
 input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
   opacity: 1;
-  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+
+/* Ensure consistent spacing for both select and date inputs */
+.input-field select,
+.input-field input[type="date"] {
+  padding-left: 24px;
+  padding-right: 48px;
+}
+
+/* Amount input with dollar sign styling */
+.input-field .input-with-icon {
+  display: flex;
+  align-items: center;
+}
+
+.input-field .input-with-icon .input-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 48px;
+  background-color: #f0f0f0;
+  border-right: 1px solid #e0e0e0;
+}
+
+.input-field .input-with-icon input {
+  padding-left: 12px;
+  text-align: left;
 }
